hphp/test/slow/lang/this_in_static.php.expectf
Fatal error: `$this` cannot be used in functions and static methods in %s on line 6
